# OPC

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  pyproject.toml  requirements.txt  常用指令.md
.codebuddy/skills/bili2srt/: SKILL.md
.codebuddy/skills/bili2srt/scripts/: bili2srt.py  requirements.txt
.codebuddy/skills/glm-tts/: SKILL.md
.codebuddy/skills/image-understand/: SKILL.md
.codebuddy/skills/image-understand/scripts/: img_understand.py
Real-time-voice/: agents.md  asr_client.py  llm_client.py  logger.py  requirements.txt  server.py  tts_client.py
Real-time-voice-codebuddy/: agents.md  asr_client.py  bright-tumbling-willow.md  llm_client.py  logger.py  requirements.txt  server.py  tts_client.py
Real-time-voice-codebuddy/frontend/: index.html  package-lock.json  package.json  vite.config.js
Real-time-voice-codebuddy/frontend/src/: App.vue
Real-time-voice-codebuddy/frontend/src/components/: CharacterPanel.vue  ChatBubbles.vue  ControlBar.vue  ParticleBg.vue  SettingsPanel.vue  VoiceWaveform.vue
Real-time-voice-codebuddy/frontend/src/composables/: useAudioPlayer.js  useMicrophone.js  (+2 more)
Real-time-voice/frontend/: index.html  package-lock.json  package.json  vite.config.js
Real-time-voice/frontend/src/: App.vue
TTS/: Qwen3-TTS-本地部署指南.md  README.md  glm_tts.py  qwen3_tts.py
opc_cli/: README.md  __init__.py  ai_daily.py  bili.py  check_api.py  cli.py  config.py  gpt_image.py  local_tts.py  logger.py  text2img.py  tts.py  tts_server.py  ui2vue.py  vision.py
ref/: ui_analysis_20260427_223453.md  ui_analysis_20260427_235305.md
(+10 files in other folders)
